// This material is the exclusive property of KUKA.
// Except as expressly permitted by separate agreement, this material
// may only be used by members of the development department of KUKA
// for internal development purposes of KUKA.
//
// Copyright (C) KUKA. All Rights Reserved.

syntax = "proto3";

package kuka.motion.external;

import "iiqka/proto-api/motion-external/control_signal_internal.proto";

option csharp_namespace = "Kuka.Motion.External";
option go_package = "golang.rd.kuka.com/motion-api/proto/kuka/motion/external";
option java_multiple_files = true;
option java_outer_classname = "ControlSignalProxyProto";
option java_package = "com.kuka.motion.external";

// Proto for handling stop requests caused by unexpected behaviour between ECS and sampler
message ControlSignalProxy {
  oneof control_signal {
    // Unexpected stop
    // Indicating a stop without sending control signal
    StopControl stop_control = 1;
    // No stop OR
    // Indicating a stop with sending control signal
    ControlSignalInternal signal = 2;
  }
}

// Message for stopping unexpectedly
message StopControl{
  // Cause of the stop
  string reason = 1;
}
